Update z-index of fixed header so we can still use the admin menu

--- a/themes/compro_theme/css/style.css
+++ b/themes/compro_theme/css/style.css
@@ -895,7 +895,7 @@ header {
     padding: 15px 20px;
     position: fixed;
     width: 100%;
-    z-index: 9999; }
+    z-index: 500; }
     header.header-fixed .header-nav-wrapper {
       margin: 0 auto;
       max-width: 1340px; }
